Use bearer authorization method
